opam-version: "2.0"
maintainer: "hez@0ok.org"
authors: [ "Hezekiah M. Carty <hez@0ok.org>" ]
license: "MIT"
homepage: "https://github.com/hcarty/indexmap"
bug-reports: "https://github.com/hcarty/indexmap/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.0.0"}
  "base-bigarray"
]
dev-repo: "git://github.com/hcarty/indexmap"
synopsis: "Generic indexed data for OCaml"
